<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BreatheBand</string>
    <string name="log_link">Stress Log</string>
    <string name="exercise_link">Breathing Exercise</string>
    <string name="sync_link">Sync Stress Log</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stress_log">Stress Log</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_breathing_exercise">Breathing Exercise</string>
    <string name="header_description">MM/DD/YYYY HH:MM AM/PM - Description</string>
    <string name="title_activity_edit_description">Edit Description</string>
    <string name="edit_button">Save New Description</string>
    <string name="description_edit_text">Edit Description</string>
    <string name="addNewResponse">Add New Stress Response</string>
    <string name="removeResponse">Delete This Stress Response</string>
    <string name="breathing_instructions">Inhale as the ball grows, and exhale as it shrinks.</string>
    <string name="title_activity_sync_stress_log">Sync Stress Log</string>

    <!-- BLE STRINGS -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="title_activity_device_control">Device Control</string>


    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
</resources>
