<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="seniordesign.breatheband.EditDescription">

    <EditText
        android:hint="@string/description_edit_text"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clearSuccess"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:onClick="saveDescription"
        />

    <TextView
        android:id="@+id/save_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10pt"/>

    <Button
        android:id="@+id/removeResponseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeResponse"
        android:onClick="removeResponse"
        />

    <TextView
        android:id="@+id/delete_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10pt"/>

</LinearLayout>
